security: Improve security configuration
- Restrict PostgreSQL port to localhost only (127.0.0.1:5432)
- Remove backend port exposure (only accessible via nginx)
- Restrict CORS allowed headers to specific list
- Add rate limiting for API endpoints (10 req/s with burst of 20)